Fix dropdown menu text alignment

--- a/app/assets/stylesheets/components/_dropdown.scss
+++ b/app/assets/stylesheets/components/_dropdown.scss
@@ -49,7 +49,7 @@
     @include text-color($header-bg, $header-bg);
     background: $white;
     border: thin solid $button-super;
-
+    text-align: left;
     -webkit-box-shadow: 7px 7px 3px -3px rgba(0, 0, 0, 0.1);
     -moz-box-shadow:    7px 7px 3px -3px rgba(0, 0, 0, 0.1);
     box-shadow:         7px 7px 3px -3px rgba(0, 0, 0, 0.1);
